# wort

./: .gitignore  Cargo.toml  README.md
resources/: worter.studyarch
resources/Archive/Grouped/Feb17/: worter.csv
src/: main.rs
